Heading and text Change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,11 +65,12 @@
             </div>
           </div>
         </div>
-        <h1 class="col-sm align-items-center d-flex" style="margin-top: 20%;">
-          <%= project.name %>
-        </h1>
-        <p class="col-sm align-items-center d-flex" style="font-size: 20px;">
-          Enter your <%= project.longName %> Network Address below to receive 20000000 Testnet POKT
+        <p class="col-sm align-items-center d-flex text-start" style="margin-top: 20%; font-size: 54px; font-weight: bold; line-height:normal;">
+          SIMPLIFY THE<br>COMPLEX. 
+        </p>
+        <p class="col-sm align-items-center d-flex text-start" style="font-size: 20px;">
+          Pocket makes RPC easy to access, operate, and govern.<br>
+          Infrastructure is for everyone. We all deserve to understand it.
         </p>
         <input id="address" class="form-control input-control mt-4" placeholder="Pocket Testnet Address"
           v-model="address" name="address">
