- config updates - text reverted heading and general text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,13 +66,13 @@
           </div>
         </div>
         <p class="col-sm align-items-center d-flex text-start" style="margin-top: 20%; font-size: 54px; font-weight: bold; line-height:normal;">
-          SIMPLIFY THE<br>COMPLEX. 
+          POCKET NETWORK<br>FAUCET 
         </p>
         <p class="col-sm align-items-center d-flex text-start" style="font-size: 20px;">
-          Pocket makes RPC easy to access, operate, and govern.<br>
-          Infrastructure is for everyone. We all deserve to understand it.
+          Get free uPOKT delivered to your wallet effortlessly<br>
+          for a smooth and productive development.
         </p>
-        <input id="address" class="form-control input-control mt-4" placeholder="Pocket Testnet Address"
+        <input id="address" class="form-control input-control mt-4" placeholder="Enter your wallet address"
           v-model="address" name="address">
         <span class="col-sm align-items-center d-flex mt-1" style="font-size: 14px;">
           Feel free to jump into our Discord to learn more about Pocket Network!
@@ -84,7 +84,7 @@
             <span id="button-loading" class="spinner-border spinner-border-sm mt-1 mr-1" style="display:none"
               role="status" aria-hidden="true"></span>
           </span>
-          <span class="sr-only">Get Testnet POKT</span>
+          <span class="sr-only">Send 20000 uPOKT</span>
         </button>
         <h2 class="col-sm d-flex align-items-center" style="margin-top: 8%;">
           Frequently Asked Questions (FAQs)
