updated title text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
           </div>
         </div>
         <p class="col-sm align-items-center d-flex text-start" style="margin-top: 20%; font-size: 54px; font-weight: bold; line-height:normal;">
-          POCKET NETWORK<br>FAUCET 
+          SHANNON TESTNET<br>FAUCET 
         </p>
         <p class="col-sm align-items-center d-flex text-start" style="font-size: 20px;">
           Get free uPOKT delivered to your wallet effortlessly<br>
