updated meta deta

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Faucet for Cosmos SDK Blockchain</title>
+  <title>Faucet for Poktroll</title>
   <link rel="icon" href="https://ping.pub/favicon.ico" />
   <meta name=”robots” content="index, follow">
-  <meta name="description" content="Uniform Faucet Tool For Cosmos SDK Blockchains - Powered By Ping.pub">
+  <meta name="description" content="Uniform Faucet Tool For Poktroll">
   <meta>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
