--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <link rel="icon" href="https://ping.pub/favicon.ico" />
   <meta name=”robots” content="index, follow">
   <meta name="description" content="Uniform Faucet Tool For Poktroll">
+  <link rel="icon" href="https://assets-global.website-files.com/651fe0a9a906d151784935f8/65834b8745b60c35c76cab89_Logo-black.svg">
   <meta>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
