--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
   <title>Faucet for Poktroll</title>
   <meta name=”robots” content="index, follow">
   <meta name="description" content="Uniform Faucet Tool For Poktroll">
-  <link rel="icon" href="https://assets-global.website-files.com/651fe0a9a906d151784935f8/65834b8745b60c35c76cab89_Logo-black.svg">
+  <link rel="icon"
+    href="https://assets-global.website-files.com/651fe0a9a906d151784935f8/65834b8745b60c35c76cab89_Logo-black.svg">
   <meta>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,28 +20,36 @@
     margin: 0 5px;
     font-weight: 300;
   }
+
   .nav-link:hover {
-    color:#698DFF;
+    color: #698DFF;
   }
+
   .active {
     color: #698DFF;
   }
+
   body {
     color: aliceblue;
   }
+
   .input-control:focus {
     border-color: #698DFF;
     box-shadow: inset 0 1px 1px rgba(39, 169, 224, 0.075), 0 0 8px rgba(39, 169, 224, 0.6);
   }
+
   button {
     color: aliceblue;
   }
+
   .accordion-button::after {
     filter: invert(100%);
   }
+
   .accordion-button:not(.collapsed)::after {
     background-image: var(--bs-accordion-btn-icon);
   }
+
   div {
     color: aliceblue;
   }
@@ -49,7 +58,7 @@
 
 <body style="background-color: #231f20;">
   <div id="app">
-    <main class="container-sm mx-auto" style="width: 50%;">
+    <main class="container-sm mx-auto col-xl-6 col-lg-6 col-md-12 col-12">
       <div class="container text-center mt-3">
         <div class="row">
           <div class="col-sm align-items-center d-flex">
@@ -65,32 +74,34 @@
             </div>
           </div>
         </div>
-        <p class="col-sm align-items-center d-flex text-start" style="margin-top: 20%; font-size: 54px; font-weight: bold; line-height:normal;">
-          SHANNON TESTNET<br>FAUCET 
+        <p class="col-sm align-items-center d-flex text-start"
+          style="margin-top: 25%; font-size: 54px; font-weight: bold; line-height:normal;">
+          SHANNON TESTNET<br>FAUCET
         </p>
         <p class="col-sm align-items-center d-flex text-start" style="font-size: 20px;">
           Get free uPOKT delivered to your wallet effortlessly<br>
           for a smooth and productive development.
         </p>
-        <input id="address" class="form-control input-control mt-4" placeholder="Enter your wallet address"
-          v-model="address" name="address">
-        <span class="col-sm align-items-center d-flex mt-1" style="font-size: 14px;">
-          Feel free to jump into our Discord to learn more about Pocket Network!
-        </span>
-        <button type="button" class="btn btn-primary d-flex flex-row mt-4"
-          style="padding: 10px 25px; background-color: #698DFF; border-radius: 25px; border: none;"
-          @click="requestToken(this)">
-          <span>
-            <span id="button-loading" class="spinner-border spinner-border-sm mt-1 mr-1" style="display:none"
-              role="status" aria-hidden="true"></span>
-          </span>
-          <span class="sr-only">Send 20000 uPOKT</span>
-        </button>
-        <h2 class="col-sm d-flex align-items-center" style="margin-top: 8%;">
+        <div class="d-flex flex-row col-12">
+          <input id="address" class="rounded-left input-control mt-4 col-lg-8 col-md-8 col-xl-8 col-7 p-2" placeholder="Enter your wallet address"
+          v-model="address" name="address"/>
+          <button type="button" class="rounded-right btn btn-primary d-flex flex-row mt-4 col-lg-4 col-md-4 col-xl-4 col-5 align-items-center justify-content-center"
+            style="padding: 5px 20px; background-color: #698DFF; border-top-left-radius: 0px; border-bottom-left-radius: 0px;"
+            @click="requestToken(this)">
+            <span>
+              <span id="button-loading" class="spinner-border spinner-border-sm mt-1 mr-1" style="display:none"
+                role="status" aria-hidden="true"></span>
+            </span>
+            <span class="sr-only">Send 20000 uPOKT</span>
+          </button>
+        </div>
+        
+        <h2 class="col-sm d-flex align-items-center" style="margin-top: 30%;">
           Frequently Asked Questions (FAQs)
         </h2>
         <div style="margin-top: 2%; background-color: #443c3e; padding: 5px; border-radius: 10px; margin-bottom: 30px;">
-          <div class="accordion accordion-flush  border-0" id="accordionFlushExample" style="background-color: #443c3e;">
+          <div class="accordion accordion-flush  border-0" id="accordionFlushExample"
+            style="background-color: #443c3e;">
             <div v-for="FAQ in FAQs" class="accordion-item overflow-hidden border-0"
               style="background-color: #443c3e; border:none!important;">
               <h2 class="accordion-header overflow-hidden border-0" :id="FAQ.id">
@@ -109,20 +120,20 @@
         </div>
       </div>
       <!-- FAQs -->
-      
+
     </main>
 
 
   </div>
   <script type="module">
     import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
-    
+
     createApp({
       data() {
         return {
           message: '',
           testnet: 'Ping Testnet',
-          logo: 'https://ping.pub/logo.svg',
+          logo: 'https://assets-global.website-files.com/651fe0a9a906d151784935f8/65834aed8fd922fc4829817f_Logo-wordm-white.svg',
           deployer: '',
           address: '',
           chain: '',
