updated page title

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Faucet for Poktroll</title>
+  <title>Faucet for Shannon</title>
   <meta name=”robots” content="index, follow">
   <meta name="description" content="Uniform Faucet Tool For Poktroll">
   <link rel="icon"
