--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,13 +89,13 @@
             style="padding: 5px 20px; background-color: #698DFF; border-top-left-radius: 0px; border-bottom-left-radius: 0px;"
             @click="requestToken(this)">
             <span>
-              <span id="button-loading" class="spinner-border spinner-border-sm mt-1 mr-1" style="display:none"
+              <span id="button-loading" class="spinner-border spinner-border-sm mt-1 mr-1" style="display:none; margin-right: 5px"
                 role="status" aria-hidden="true"></span>
             </span>
             <span class="sr-only">Send {{ this.txAmount}} POKT</span>
           </button>
         </div>
-        
+        <div id="message" v-html="message"></div>
         <h2 class="col-sm d-flex align-items-center" style="margin-top: 30%;">
           Frequently Asked Questions (FAQs)
         </h2>
@@ -223,7 +223,7 @@
             obj.disabled = true
             document.getElementById("button-loading").style.display = 'block';
 
-            fetch(`/send/${this.chain}/${this.address}`).then(response => response.json()).then(data => {
+           fetch(`/send/${this.chain}/${this.address}`).then(response => response.json()).then(data => {
               // button state
               obj.disabled = false
               document.getElementById("button-loading").style.display = 'none';
@@ -235,10 +235,12 @@
                       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
                   `
-            });
+           });
           } else {
+            obj.disabled = false
             this.message = '<span class="text-danger">Address is required</span>'
           }
+          obj.disabled = false
         }
       }
     }).mount('#app')
