--- a/views/index.ejs
+++ b/views/index.ejs
@@ -157,7 +157,7 @@
             },
             {
               "question": "How do I create a new account (wallet)?",
-              "answer": `Follow the instructions here: https://dev.poktroll.com/operate/user_guide/create-new-wallet.`,
+              "answer": `Follow the instructions here: <a href='https://dev.poktroll.com/operate/user_guide/create-new-wallet' target='_blank'>https://dev.poktroll.com/operate/user_guide/create-new-wallet</a>.`,
               "id": "flush-headingTwo",
               "id2": "flush-collapseTwo",
             },
