[Docs] Update FAQ to show how to create wallet (#5)
Link to the new wallet creation guide [1] from our faucet [2]

[1] https://dev.poktroll.com/operate/user_guide/create-new-wallet
[2] https://faucet.testnet.pokt.network/

---------

Co-authored-by: Dima K. <okdas@users.noreply.github.com>

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@
             <span class="sr-only">Send {{ this.txAmount}} uPOKT</span>
           </button>
         </div>
-        
+
         <h2 class="col-sm d-flex align-items-center" style="margin-top: 30%;">
           Frequently Asked Questions (FAQs)
         </h2>
@@ -152,6 +152,12 @@
             {
               "question": "How does the faucet work?",
               "answer": `Enter your Pocket Network wallet address in the designated textbox field and click 'Send 20000 uPOKT'. The faucet will generate a transaction and send the testnet tokens to the provided address. If you're interested, you can monitor the transaction's status using a blockchain explorer or an RPC endpoint.`,
+              "id": "flush-headingTwo",
+              "id2": "flush-collapseTwo",
+            },
+            {
+              "question": "How do I create a new account (wallet)?",
+              "answer": `Follow the instructions here: <a href='https://dev.poktroll.com/operate/user_guide/create-new-wallet' target='_blank'>https://dev.poktroll.com/operate/user_guide/create-new-wallet</a>.`,
               "id": "flush-headingTwo",
               "id2": "flush-collapseTwo",
             },
