fix flush-heading and flush-collapse count in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,38 +158,38 @@
             {
               "question": "How do I create a new account (wallet)?",
               "answer": `Follow the instructions here: <a href='https://dev.poktroll.com/operate/user_guide/create-new-wallet' target='_blank'>https://dev.poktroll.com/operate/user_guide/create-new-wallet</a>.`,
-              "id": "flush-headingTwo",
-              "id2": "flush-collapseTwo",
-            },
-            {
-              "question": "Is there a daily rate limit on token requests?",
-              "answer": "Yes, each Pocket Wallet address can request only 2 times per 24 hours.",
               "id": "flush-headingThree",
               "id2": "flush-collapseThree",
             },
             {
-              "question": "What if I want more than the allowed token amount?",
-              "answer": "To prevent abuse and ensure fair distribution of test tokens, there's a rate limit on the number of request each wallet address can request.",
+              "question": "Is there a daily rate limit on token requests?",
+              "answer": "Yes, each Pocket Wallet address can request only 2 times per 24 hours.",
               "id": "flush-headingFour",
               "id2": "flush-collapseFour",
             },
             {
-              "question": "What should I do if my request continues to fail?",
-              "answer": "To avoid being mistakenly identified as a bot, please avoid frequent operations and wait a few minutes before trying the next action. If problems persist, don't hesitate to seek assistance on the <a href='https://discord.gg/pokt' target='_blank'>Pocket Network Discord channel.</a>",
+              "question": "What if I want more than the allowed token amount?",
+              "answer": "To prevent abuse and ensure fair distribution of test tokens, there's a rate limit on the number of request each wallet address can request.",
               "id": "flush-headingFive",
               "id2": "flush-collapseFive",
             },
             {
-              "question": "How do I begin building Web3 Apps on Pocket Network?",
-              "answer": "You can get started by visting <a href='https://www.pokt.network' target='_blank'>https://www.pokt.network</a>",
+              "question": "What should I do if my request continues to fail?",
+              "answer": "To avoid being mistakenly identified as a bot, please avoid frequent operations and wait a few minutes before trying the next action. If problems persist, don't hesitate to seek assistance on the <a href='https://discord.gg/pokt' target='_blank'>Pocket Network Discord channel.</a>",
               "id": "flush-headingSix",
               "id2": "flush-collapseSix",
             },
             {
-              "question": "Have additional questions or feedback?",
-              "answer": "We're keen to hear from you. Help us enhance our services by initiating a conversation on our <a href='https://discord.gg/pokt' target='_blank'>Discord server.</a>",
+              "question": "How do I begin building Web3 Apps on Pocket Network?",
+              "answer": "You can get started by visting <a href='https://www.pokt.network' target='_blank'>https://www.pokt.network</a>",
               "id": "flush-headingSeven",
               "id2": "flush-collapseSeven",
+            },
+            {
+              "question": "Have additional questions or feedback?",
+              "answer": "We're keen to hear from you. Help us enhance our services by initiating a conversation on our <a href='https://discord.gg/pokt' target='_blank'>Discord server.</a>",
+              "id": "flush-headingEight",
+              "id2": "flush-collapseEight",
             }
           ]
         }
