--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,6 +53,19 @@
   div {
     color: aliceblue;
   }
+
+  .pill {
+    display: inline-block;
+    padding: 0.5em 1em;
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #007bff;
+    /* Blue color */
+    border-radius: 20px;
+    text-transform: uppercase;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  }
 </style>
 </head>
 
@@ -64,6 +77,7 @@
           <div class="col-sm align-items-center d-flex">
             <img id="logo" class="d-block" style="max-width: 200px;" src="<%= project.logo %>"
               :alt="`${testnet} Faucet`">
+            <div class="pill" :style="`display: ${!this.isBeta ? 'none' : ''}`">beta</div>
           </div>
           <div class="col-sm align-items-center d-flex justify-content-end">
             <div style="flex-direction: row; display: flex; width: 80%; justify-content: space-between;">
@@ -83,14 +97,15 @@
           for a smooth and productive development.
         </p>
         <div class="d-flex flex-row col-12">
-          <input id="address" class="rounded-left input-control mt-4 col-lg-8 col-md-8 col-xl-8 col-7 p-2" placeholder="Enter your wallet address"
-          v-model="address" name="address"/>
-          <button type="button" class="rounded-right btn btn-primary d-flex flex-row mt-4 col-lg-4 col-md-4 col-xl-4 col-5 align-items-center justify-content-center"
+          <input id="address" class="rounded-left input-control mt-4 col-lg-8 col-md-8 col-xl-8 col-7 p-2"
+            placeholder="Enter your wallet address" v-model="address" name="address" />
+          <button type="button"
+            class="rounded-right btn btn-primary d-flex flex-row mt-4 col-lg-4 col-md-4 col-xl-4 col-5 align-items-center justify-content-center"
             style="padding: 5px 20px; background-color: #698DFF; border-top-left-radius: 0px; border-bottom-left-radius: 0px;"
             @click="requestToken(this)">
             <span>
-              <span id="button-loading" class="spinner-border spinner-border-sm mt-1 mr-1" style="display:none; margin-right: 5px"
-                role="status" aria-hidden="true"></span>
+              <span id="button-loading" class="spinner-border spinner-border-sm mt-1 mr-1"
+                style="display:none; margin-right: 5px" role="status" aria-hidden="true"></span>
             </span>
             <span class="sr-only">Send {{ this.txAmount}} POKT</span>
           </button>
@@ -138,8 +153,9 @@
           address: '',
           chain: '',
           conf: {},
+          isBeta: false,
           balance: {},
-          txAmount:'',
+          txAmount: '',
           ethAddr: '0xxxx',
           path: window.location.pathname,
           FAQs: [
@@ -199,6 +215,7 @@
           this.conf = data
           this.chain = data.blockchains[0]
           this.txAmount = data.txAmount
+          this.isBeta = data.isBeta
           this.FAQs[1].answer = `Enter your Pocket Network wallet address in the designated textbox field and click 'Send ${this.txAmount} POKT'. The faucet will generate a transaction and send the testnet tokens to the provided address. If you're interested, you can monitor the transaction's status using a blockchain explorer or an RPC endpoint.`
           // this.placeholder = `Input an address (e.g.: ${data.sample[this.chain]}) to received tokens`
           this.onChange();
@@ -229,7 +246,7 @@
             obj.disabled = true
             document.getElementById("button-loading").style.display = 'block';
 
-           fetch(`/send/${this.chain}/${this.address}`).then(response => response.json()).then(data => {
+            fetch(`/send/${this.chain}/${this.address}`).then(response => response.json()).then(data => {
               // button state
               obj.disabled = false
               document.getElementById("button-loading").style.display = 'none';
@@ -241,7 +258,7 @@
                       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
                   `
-           });
+            });
           } else {
             obj.disabled = false
             this.message = '<span class="text-danger">Address is required</span>'
