--- a/views/index.ejs
+++ b/views/index.ejs
@@ -280,7 +280,7 @@
                   <div class="mt-2">
                     ${data.result.txhash ? `
                       <span class="d-block text-primary">Transaction Hash: <code>${data.result.txhash}</code></span>
-                      <button class="btn btn-outline-secondary btn-sm mt-1" onclick="copyToClipboard('${data.txhash}')">Copy</button>
+                      <button class="btn btn-outline-secondary btn-sm mt-1" onclick="copyToClipboard('${data.result.txhash}')">Copy</button>
                     ` : `
                       <textarea class="form-control mt-1" rows="5" style="background-color:transparent">${JSON.stringify(data, null, 2)}</textarea>
                     `}
