--- a/views/index.ejs
+++ b/views/index.ejs
@@ -164,10 +164,10 @@
   <!-- footer -->
   <footer style="background-color: #231f20; text-align: center; padding: 15px 0; width: 100%; position: sticky; bottom: 0; z-index: 100; box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);">
     <div style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap;">
-      &copy; <span id="currentYear"></span> Pocket Network. All rights reserved. Powered by 
-      <a href="https://stakenodes.org" target="_blank" style="display: flex; align-items: center; margin-left: 5px;">
+      &copy; <span id="currentYear"></span> &nbsp;Pocket Network. All rights reserved. Powered by 
+      <a href="https://stakenodes.org" target="_blank" style="display: flex; align-items: center; margin-left: 1px; text-decoration: none;">
         <img src="https://stakenodes.org/favicon.png" alt="Stakenodes" style="height: 24px; margin: 0 5px;">
-        <span>Stakenodes</span>
+        <span style="color: white">Stakenodes</span>
       </a>
     </div>
   </footer>
