added line break

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,7 +105,7 @@
           POCKET <%= blockchains[0].chainType %><br>FAUCET
         </p>
         <p class="col-sm align-items-center d-flex text-start" style="font-size: 20px;">
-          Get a free MACT token to initialize your Shannon account and start your journey on the network
+          Get a free MACT token to initialize your Shannon account <br>and start your journey on the network
         </p>
         <div class="d-flex flex-row col-12">
           <input id="address" class="rounded-left input-control mt-4 col-lg-8 col-md-8 col-xl-8 col-7 p-2"
