changed address to be pocket.network

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,9 +94,9 @@
           <div class="col-sm align-items-center d-flex justify-content-end">
             <div style="flex-direction: row; display: flex; width: 80%; justify-content: space-between;">
               <a v-bind:class="[path === '/' ? 'active':'', 'nav-link']" href="#">Home</a>
-              <a class="nav-link" href="https://www.pokt.network/about" target="_blank">About</a>
-              <a class="nav-link" href="https://www.pokt.network/blog" target="_blank">Blog</a>
-              <a class="nav-link" href="https://docs.pokt.network/" target="_blank">Documentation</a>
+              <a class="nav-link" href="https://www.pocket.network/about" target="_blank">About</a>
+              <a class="nav-link" href="https://www.pocket.network/blog" target="_blank">Blog</a>
+              <a class="nav-link" href="https://docs.pocket.network/" target="_blank">Documentation</a>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
             },
             {
               "question": "How do I begin building Web3 Apps on Pocket Network?",
-              "answer": "You can get started by visting <a href='https://www.pokt.network' target='_blank'>https://www.pokt.network</a>",
+              "answer": "You can get started by visting <a href='https://www.pocket.network' target='_blank'>https://www.pocket.network</a>",
               "id": "flush-headingSeven",
               "id2": "flush-collapseSeven",
             },
